# pdf2chem

./: 20210306combined_csv.csv  20210331_short_doc_for_curator_testing_pt_1_20210331_names_and_SMILES.csv  20210331_short_doc_for_curator_testing_pt_2_20210331_names_and_SMILES.csv  20210331combined_csv.csv  CONTRIBUTING.rst  README.md  Smith_wet_DES_salty_water_20210306_names_and_SMILES.csv  Untitled.ipynb  pdf2chem.py  pdf2chem_curator_self_contained_in_colab.ipynb  pdf2chem_for_use_in_colab_or_jupyter.ipynb  pyproject.toml  testing_and_development.ipynb
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pdf2chem.rst
pdf2chem/: pdf2chem.py
tests/: 20210309_short_doc_for_python-testing_20210309_names_and_SMILES.csv  20210309_short_doc_for_python-testing_20210309_zzz_missed_items.csv  Smith_wet_DES_salty_water_names_and_SMILES.csv  test_pdf2chem.py
